Lots of things added: login system, dashboard. Lots of integration happened too.